--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Puneet Welcome to your first GitHub Pages website!</p>
-  <a href="contactus.html">HelloWorld.html</a>
+  <a href="/src/contactus.html">HelloWorld.html</a>
 </body>
 </html>
